Implemented local storage for list items, retrieves items from local storage or initializes state to default list items

--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@ header {
 	grid-row: 2 / 3;
 	background-color: #fff;
 	overflow-y: scroll;
-	scrollbar-color: red orange;
+	scrollbar-color: #333 #f1d4b3;
 	scrollbar-width: thin;
 	position: relative;
 }
