--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,7 @@ main {
 }
 
 header {
+	position: relative;
 	grid-column: 1 / 3;
 	grid-row: 1 / 2;
 	background-color: #fbf5ed;
@@ -62,6 +63,15 @@ header {
 	justify-content: space-between;
 	align-items: center;
 	padding: 0 28px;
+}
+
+.progress-bar {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	height: 8px;
+	background-color: rgb(70, 203, 255);
+	transition: all 0.25s;
 }
 
 .counter {
